# backend/docs/swagger.yaml
@@ -115,13 +115,11 @@ definitions:
         type: object
       adminrepairPersonal:
         $ref: '#/definitions/ent.Personal'
-        description: AdminrepairPersonal holds the value of the AdminrepairPersonal
-          edge.
+        description: AdminrepairPersonal holds the value of the AdminrepairPersonal edge.
         type: object
       adminrepairProduct:
         $ref: '#/definitions/ent.Product'
-        description: AdminrepairProduct holds the value of the AdminrepairProduct
-          edge.
+        description: AdminrepairProduct holds the value of the AdminrepairProduct edge.
         type: object
       receipt:
         description: Receipt holds the value of the receipt edge.
@@ -188,6 +186,11 @@ definitions:
         $ref: '#/definitions/ent.Personal'
         description: Personal holds the value of the personal edge.
         type: object
+      receipt:
+        description: Receipt holds the value of the receipt edge.
+        items:
+          $ref: '#/definitions/ent.Receipt'
+        type: array
       title:
         $ref: '#/definitions/ent.Title'
         description: Title holds the value of the title edge.
@@ -470,16 +473,6 @@ definitions:
     type: object
   ent.Receipt:
     properties:
-      Cusidentification:
-        description: Cusidentification holds the value of the "Cusidentification"
-          field.
-        type: string
-      Customername:
-        description: Customername holds the value of the "Customername" field.
-        type: string
-      Phonenumber:
-        description: Phonenumber holds the value of the "Phonenumber" field.
-        type: string
       added_time:
         description: AddedTime holds the value of the "added_time" field.
         type: string
@@ -498,6 +491,10 @@ definitions:
       adminrepair:
         $ref: '#/definitions/ent.Adminrepair'
         description: Adminrepair holds the value of the adminrepair edge.
+        type: object
+      customer:
+        $ref: '#/definitions/ent.Customer'
+        description: Customer holds the value of the customer edge.
         type: object
       paymenttype:
         $ref: '#/definitions/ent.PaymentType'
@@ -2546,7 +2543,6 @@ securityDefinitions:
     tokenUrl: https://example.com/oauth/token
     type: oauth2
   OAuth2Application:
-    authorizationUrl: ""
     flow: application
     scopes:
       admin: ' Grants read and write access to administrative information'
@@ -2561,7 +2557,6 @@ securityDefinitions:
       write: ' Grants write access'
     type: oauth2
   OAuth2Password:
-    authorizationUrl: ""
     flow: password
     scopes:
       admin: ' Grants read and write access to administrative information'
